--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/hey.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Michał Wdowik Dev">
+    <meta name="theme-color" content="#000000">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
     <title>Michał Wdowik Dev</title>
   </head>
   <body>
@@ -11,3 +14,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
